--- a/Cachet.NET/Cachet.NET.csproj
+++ b/Cachet.NET/Cachet.NET.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Cachet.NET</RootNamespace>
     <AssemblyName>Cachet.NET</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,29 +33,41 @@
     <FileAlignment>1024</FileAlignment>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RestSharp, Version=106.2.1.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.106.2.1\lib\net452\RestSharp.dll</HintPath>
+    <Reference Include="RestSharp, Version=106.6.7.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>C:\Projects\HlidacStatu\trunk\packages\RestSharp.106.6.7\lib\net452\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.ValueTuple">
-      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net47\System.ValueTuple.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>C:\Projects\HlidacStatu\trunk\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cachet.Metric.cs" />
+    <Compile Include="Cachet.Incident.cs" />
+    <Compile Include="Cachet.ComponentGroup.cs" />
+    <Compile Include="Cachet.Component.cs" />
     <Compile Include="Cachet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\ComponentGroupResponse.cs" />
     <Compile Include="Responses\ComponentResponse.cs" />
     <Compile Include="Responses\ComponentGroupsResponse.cs" />
     <Compile Include="Responses\ComponentsResponse.cs" />
+    <Compile Include="Responses\GeneralResponse.cs" />
+    <Compile Include="Responses\MetricsResponse.cs" />
+    <Compile Include="Responses\MetricResponse.cs" />
     <Compile Include="Responses\IncidentResponse.cs" />
     <Compile Include="Responses\IncidentsResponse.cs" />
+    <Compile Include="Responses\MetaObject.cs" />
     <Compile Include="Responses\Objects\ComponentGroupObject.cs" />
     <Compile Include="Responses\Objects\ComponentObject.cs" />
+    <Compile Include="Responses\Objects\ComponentStatus.cs" />
+    <Compile Include="Responses\Objects\IItem.cs" />
+    <Compile Include="Responses\Objects\MetricObject.cs" />
     <Compile Include="Responses\Objects\IncidentObject.cs" />
     <Compile Include="Responses\Objects\IncidentStatus.cs" />
+    <Compile Include="Responses\PaginationObject.cs" />
     <Compile Include="Responses\VersionResponse.cs" />
     <Compile Include="Responses\PingResponse.cs" />
   </ItemGroup>
