--- a/Cachet.NET/Cachet.NET.csproj
+++ b/Cachet.NET/Cachet.NET.csproj
@@ -1,79 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{90A88052-D2DD-4D94-AD9D-20DA8D49BAFC}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cachet.NET</RootNamespace>
-    <AssemblyName>Cachet.NET</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>Builds\Debug\</OutputPath>
-    <DefineConstants>DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>1</WarningLevel>
-    <FileAlignment>1024</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>Builds\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>0</WarningLevel>
-    <FileAlignment>1024</FileAlignment>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="RestSharp, Version=106.6.7.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
-      <HintPath>C:\Projects\HlidacStatu\trunk\packages\RestSharp.106.6.7\lib\net452\RestSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>C:\Projects\HlidacStatu\trunk\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Cachet.Metric.cs" />
-    <Compile Include="Cachet.Incident.cs" />
-    <Compile Include="Cachet.ComponentGroup.cs" />
-    <Compile Include="Cachet.Component.cs" />
-    <Compile Include="Cachet.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Responses\ComponentGroupResponse.cs" />
-    <Compile Include="Responses\ComponentResponse.cs" />
-    <Compile Include="Responses\ComponentGroupsResponse.cs" />
-    <Compile Include="Responses\ComponentsResponse.cs" />
-    <Compile Include="Responses\GeneralResponse.cs" />
-    <Compile Include="Responses\MetricsResponse.cs" />
-    <Compile Include="Responses\MetricResponse.cs" />
-    <Compile Include="Responses\IncidentResponse.cs" />
-    <Compile Include="Responses\IncidentsResponse.cs" />
-    <Compile Include="Responses\MetaObject.cs" />
-    <Compile Include="Responses\Objects\ComponentGroupObject.cs" />
-    <Compile Include="Responses\Objects\ComponentObject.cs" />
-    <Compile Include="Responses\Objects\ComponentStatus.cs" />
-    <Compile Include="Responses\Objects\IItem.cs" />
-    <Compile Include="Responses\Objects\MetricObject.cs" />
-    <Compile Include="Responses\Objects\IncidentObject.cs" />
-    <Compile Include="Responses\Objects\IncidentStatus.cs" />
-    <Compile Include="Responses\PaginationObject.cs" />
-    <Compile Include="Responses\VersionResponse.cs" />
-    <Compile Include="Responses\PingResponse.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <PackageReference Include="RestSharp" Version="106.6.7" />
+  </ItemGroup> <PropertyGroup>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+</PropertyGroup> 
 </Project>
