--- a/Cachet.NET/Cachet.NET.csproj
+++ b/Cachet.NET/Cachet.NET.csproj
@@ -33,6 +33,9 @@
     <FileAlignment>1024</FileAlignment>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>C:\Projects\HlidacStatu\trunk\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp, Version=106.6.7.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
       <HintPath>C:\Projects\HlidacStatu\trunk\packages\RestSharp.106.6.7\lib\net452\RestSharp.dll</HintPath>
     </Reference>
@@ -49,7 +52,10 @@
     <Compile Include="Cachet.ComponentGroup.cs" />
     <Compile Include="Cachet.Component.cs" />
     <Compile Include="Cachet.cs" />
+    <Compile Include="Exceptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\IncidentUpdateResponse.cs" />
+    <Compile Include="Util\JsonSerialiser.cs" />
     <Compile Include="Responses\ComponentGroupResponse.cs" />
     <Compile Include="Responses\ComponentResponse.cs" />
     <Compile Include="Responses\ComponentGroupsResponse.cs" />
@@ -64,6 +70,7 @@
     <Compile Include="Responses\Objects\ComponentObject.cs" />
     <Compile Include="Responses\Objects\ComponentStatus.cs" />
     <Compile Include="Responses\Objects\IItem.cs" />
+    <Compile Include="Responses\Objects\IncidentUpdate.cs" />
     <Compile Include="Responses\Objects\MetricObject.cs" />
     <Compile Include="Responses\Objects\IncidentObject.cs" />
     <Compile Include="Responses\Objects\IncidentStatus.cs" />
