--- a/Cachet.NET/packages.config
+++ b/Cachet.NET/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="RestSharp" version="106.6.7" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
 </packages>
